--- a/net/haproxy/Makefile
+++ b/net/haproxy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.49 2019/08/11 09:09:41 maya Exp $
+# $NetBSD: Makefile,v 1.50 2019/08/19 10:10:36 adam Exp $
 
-DISTNAME=	haproxy-2.0.3
+DISTNAME=	haproxy-2.0.5
 CATEGORIES=	net www
 MASTER_SITES=	http://www.haproxy.org/download/${PKGVERSION_NOREV:R}/src/
 
